# StupidCalculator

./: CMakeLists.txt  README.md  StupidCalculator.cpp
